--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+  mwwm: ^0.1.1
+  relation: ^0.0.2
+  webview_flutter: ^1.0.7
+  flutter_search_bar: ^2.1.0
+  equatable: ^1.2.5
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
