--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,15 @@ dependencies:
   flutter_search_bar: ^2.1.0
   equatable: ^1.2.5
   provider: ^4.3.2+3
+  json_annotation: ^3.1.1
+  dio: ^3.0.10
 
 dev_dependencies:
+  build_runner: ^1.10.13
   flutter_test:
     sdk: flutter
   mockito: ^4.1.3
+  json_serializable: ^3.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -55,6 +59,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - images/book-placeholder.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
