--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   provider: ^4.3.2+3
   json_annotation: ^3.1.1
   dio: ^3.0.10
+  sqflite: ^1.3.0
+  path_provider: ^2.0.1
 
 dev_dependencies:
   build_runner: ^1.10.13
