--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,11 @@ dev_dependencies:
   build_runner: ^1.10.13
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.3
+  flutter_driver:
+    sdk: flutter
+  integration_test:
+    sdk: flutter
+  mockito: ^4.1.1
   json_serializable: ^3.5.1
 
 # For information on the generic Dart part of this file, see the
